Fixed height spacing, and added a hover effect on the images for the product box

--- a/src/components/MainProductArea/ProductAreaCss.css
+++ b/src/components/MainProductArea/ProductAreaCss.css
@@ -3,6 +3,6 @@
     @tailwind utilities;
 
 .productBox {
-    @apply text-black bg-white h-96 min-w-40 max-w-72 shadow-2xl 
-    rounded-2xl lg:text-red-500 md:text-yellow-500 sm:text-blue-500
+    @apply text-black bg-white  min-w-40 max-w-72 
+    rounded-2xl lg:text-black md:text-yellow-500 sm:text-blue-500
 }
